fix page width overflow

--- a/src/App.css
+++ b/src/App.css
@@ -188,13 +188,13 @@ html {
   overflow: hidden;
   background: #2a304e;
   scroll-behavior: smooth;
-  max-width: calc(100vw);
+  max-width: 100vw;
 }
 
 html,
 body {
   height: 100%;
-  max-width: calc(100vw);
+  max-width: 100vw;
   overflow: hidden;
   scroll-behavior: smooth;
 }
